--- a/final_notebook.ipynb
+++ b/final_notebook.ipynb
@@ -195,7 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "9adb5df3",
+   "id": "b46e8062",
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "15ba075f",
+   "id": "c8407070",
    "metadata": {},
    "source": [
     "#       ------------------------------ Explore ------------------------------"
@@ -434,7 +434,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "6f1c2ff9",
+   "id": "01b86806",
    "metadata": {},
    "outputs": [
     {
@@ -452,7 +452,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "37610eb9",
+   "id": "805b4d6e",
    "metadata": {},
    "source": [
     "#   ---------------------- Exploration Summary ------------------------"
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8146e132",
+   "id": "9d4ce114",
    "metadata": {},
    "source": [
     "* Sq.feet has a strong positive correlation to tax value\n",
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "86e7eb4c",
+   "id": "24a8e6f9",
    "metadata": {},
    "source": [
     "#   ----------------------------- Modeling -------------------------------"
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3f2056f1",
+   "id": "57a49d2c",
    "metadata": {},
    "source": [
     "## removing unwanted features"
@@ -497,7 +497,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "77071d16",
+   "id": "884fd460",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -509,7 +509,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "82b5e507",
+   "id": "ac78956a",
    "metadata": {},
    "source": [
     "## Creating X and Y Vars"
@@ -518,7 +518,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "cf70abbc",
+   "id": "59b779cf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -527,7 +527,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ccc8bd36",
+   "id": "a1fcd726",
    "metadata": {},
    "source": [
     "## Scaling Data"
@@ -536,7 +536,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "1b9a8b46",
+   "id": "efd5e6cb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -546,14 +546,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cfd88c3c",
+   "id": "7ea1b2e0",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "fccbd70e",
+   "id": "10e20e71",
    "metadata": {},
    "source": [
     "## Evaluations metric is RMSE"
@@ -561,7 +561,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "42742f49",
+   "id": "dea5634b",
    "metadata": {},
    "source": [
     "## Baseline"
@@ -570,7 +570,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "2e9320fb",
+   "id": "b38b93a0",
    "metadata": {},
    "outputs": [
     {
@@ -596,7 +596,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a4e9fc10",
+   "id": "0fbdecd2",
    "metadata": {},
    "source": [
     "# Linear Regression"
@@ -605,7 +605,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "cc187c48",
+   "id": "2c52ca99",
    "metadata": {},
    "outputs": [
     {
@@ -625,7 +625,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "25071029",
+   "id": "c0ce89f9",
    "metadata": {},
    "source": [
     "# Lasso + LARS"
@@ -634,7 +634,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "97e3f746",
+   "id": "0fa9c86a",
    "metadata": {},
    "outputs": [
     {
@@ -653,31 +653,38 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "934c3409",
+   "metadata": {},
+   "source": [
+    "# GLM"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "0dc24e2c",
+   "execution_count": 18,
+   "id": "c6a1c48c",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'glm_rmse' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/d0/5dr5q0n145vcn3_m9dxy1xq80000gn/T/ipykernel_63011/1959809850.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0my_train\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0my_validate\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mglm_rmse\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx_train_scaled\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0my_train\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mx_validate_scaled\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0my_validate\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'glm_rmse' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RMSE for GLM using Tweedie, power=0 & alpha=0\n",
+      "Training/In-Sample:  284030.24304288835 \n",
+      "Validation/Out-of-Sample:  283258.10613560624 \n",
+      "Difference:  772.1369072821108\n"
      ]
     }
    ],
    "source": [
-    "y_train,y_validate = glm_rmse(x_train_scaled,y_train,x_validate_scaled,y_validate)"
+    "y_train,y_validate = mo.glm_rmse(x_train_scaled,y_train,x_validate_scaled,y_validate)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c6e11383",
+   "id": "d70be0d4",
    "metadata": {},
    "outputs": [],
    "source": []
