--- a/final_notebook.ipynb
+++ b/final_notebook.ipynb
@@ -457,9 +457,11 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "2a3c7794",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d147d62b",
    "metadata": {},
+   "outputs": [],
    "source": [
     "* Sq.feet has a strong positive correlation to tax value\n",
     "\n",
@@ -473,7 +475,11 @@
     "* Features included in the model\n",
     "    * sq. feet\n",
     "    * bedrooms\n",
-    "    * bathrooms\n"
+    "    * bathrooms\n",
+    "    * parcel id\n",
+    "    * fireplace count\n",
+    "    * pool status\n",
+    "    * ...\n"
    ]
   },
   {
