--- a/final_notebook.ipynb
+++ b/final_notebook.ipynb
@@ -457,11 +457,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d147d62b",
+   "cell_type": "markdown",
+   "id": "35b351e5",
    "metadata": {},
-   "outputs": [],
    "source": [
     "* Sq.feet has a strong positive correlation to tax value\n",
     "\n",
@@ -815,10 +813,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "27f3d15b",
+   "id": "ef5f7b4d",
    "metadata": {},
    "source": [
-    "* All models out performed the baseline on bath train and validate\n",
+    "* All models out performed the baseline on both train and validate\n",
     "* The best model is the Lasso + LARS. It has some of the lowest rmse as well as one of the best performing in terms of overfitting"
    ]
   },
